--- a/DataFeatures&Augmentation.ipynb
+++ b/DataFeatures&Augmentation.ipynb
@@ -121,7 +121,7 @@
         "(train_X, train_y), (test_X, test_y) = mnist.load_data()\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         "no1 = train_X[train_y==1,:,:] ## dataset corresponding to number = 1.\n",
         "no0 = train_X[train_y==0,:,:] ## dataset corresponding to number = 0."
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
         "  plt.imshow(no0[ii,:,:])\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -641,6 +641,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "1)the choice of features ultimately depends on your specific requirements, the type of data you're working with, and the visual representation you want to achieve. It's often helpful to experiment with different libraries and features to find the best combination that suits your needs.\n",
+        "\n",
+        "2)Scatter Plot Matrix\n",
+        "\n",
+        "3)Time-based Features or Aggregated Features\n",
+        "\n",
+        "4)The specific features mentioned in the code (no0 and no1) are tailored for the binary classification problem of distinguishing between digits 0 and 1. They are subsets of the MNIST dataset that contain images representing those specific digits.\n",
+        "\n",
+        "5)When you have more than two classes in a classification problem, it is known as a multi-class classification problem. The number of classes can be three, four, or more. Several consequences arise when dealing with multi-class classification Increased Complexity or Expanded Output Space "
+      ],
+      "metadata": {
+        "id": "EunPy22qEcyy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Features from CSV file"
       ],
       "metadata": {
@@ -967,7 +984,7 @@
       "metadata": {
         "id": "X865GgHNunNX"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +1001,7 @@
       "metadata": {
         "id": "MqbH4lIWqw7V"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1017,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1042,7 @@
           "height": 424
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1263,7 +1280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1315,7 @@
           "height": 300
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1511,7 +1528,7 @@
           "height": 625
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1576,7 @@
           "height": 659
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
